// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Checkbox Element renders checkbox 1`] = `
<div
  className="tribe-editor__checkbox"
>
  <input
    checked={false}
    className="tribe-editor__input tribe-editor__input--checkbox tribe-editor__checkbox__input"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="tribe-editor__checkbox__label"
  />
</div>
`;

exports[`Checkbox Element renders checkbox with class 1`] = `
<div
  className="tribe-editor__checkbox test-class"
>
  <input
    checked={false}
    className="tribe-editor__input tribe-editor__input--checkbox tribe-editor__checkbox__input"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="tribe-editor__checkbox__label"
  />
</div>
`;

exports[`Checkbox Element renders checkbox with id 1`] = `
<div
  className="tribe-editor__checkbox"
>
  <input
    checked={false}
    className="tribe-editor__input tribe-editor__input--checkbox tribe-editor__checkbox__input"
    id="test-id"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="tribe-editor__checkbox__label"
    htmlFor="test-id"
  />
</div>
`;

exports[`Checkbox Element renders checkbox with label 1`] = `
<div
  className="tribe-editor__checkbox"
>
  <input
    checked={false}
    className="tribe-editor__input tribe-editor__input--checkbox tribe-editor__checkbox__input"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="tribe-editor__checkbox__label"
  >
    Test Label
  </label>
</div>
`;

exports[`Checkbox Element renders checkbox with name 1`] = `
<div
  className="tribe-editor__checkbox"
>
  <input
    checked={false}
    className="tribe-editor__input tribe-editor__input--checkbox tribe-editor__checkbox__input"
    name="test-name"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="tribe-editor__checkbox__label"
  />
</div>
`;

exports[`Checkbox Element renders checkbox with onChange handler 1`] = `
<div
  className="tribe-editor__checkbox"
>
  <input
    checked={false}
    className="tribe-editor__input tribe-editor__input--checkbox tribe-editor__checkbox__input"
    onChange={[MockFunction]}
    type="checkbox"
  />
  <label
    className="tribe-editor__checkbox__label"
  />
</div>
`;

exports[`Checkbox Element renders checkbox with value 1`] = `
<div
  className="tribe-editor__checkbox"
>
  <input
    checked={false}
    className="tribe-editor__input tribe-editor__input--checkbox tribe-editor__checkbox__input"
    onChange={[Function]}
    type="checkbox"
    value="Test Value"
  />
  <label
    className="tribe-editor__checkbox__label"
  />
</div>
`;

exports[`Checkbox Element renders checked checkbox 1`] = `
<div
  className="tribe-editor__checkbox"
>
  <input
    checked={true}
    className="tribe-editor__input tribe-editor__input--checkbox tribe-editor__checkbox__input"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="tribe-editor__checkbox__label"
  />
</div>
`;

exports[`Checkbox Element renders disabled checkbox 1`] = `
<div
  className="tribe-editor__checkbox"
>
  <input
    checked={false}
    className="tribe-editor__input tribe-editor__input--checkbox tribe-editor__checkbox__input"
    disabled={true}
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="tribe-editor__checkbox__label"
  />
</div>
`;

exports[`Checkbox Element renders unchecked checkbox 1`] = `
<div
  className="tribe-editor__checkbox"
>
  <input
    checked={false}
    className="tribe-editor__input tribe-editor__input--checkbox tribe-editor__checkbox__input"
    onChange={[Function]}
    type="checkbox"
  />
  <label
    className="tribe-editor__checkbox__label"
  />
</div>
`;
